samples/map/valid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="initial.dita" collection-type="family"/>
  <topicgroup collection-type="family">
    <topicref href="grouped.dita" collection-type="family"/>
  </topicgroup>
</map>