samples/map/invalid/R12.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="initial.dita" collection-type="family"/>
  <topicgroup collection-type="family">
    <!-- Missing topicref -->
  </topicgroup>
</map>